[gd_scene load_steps=10 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://defaultFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://images/gruen.png" type="Texture" id=3]
[ext_resource path="res://images/red.png" type="Texture" id=4]
[ext_resource path="res://images/gelb.png" type="Texture" id=5]
[ext_resource path="res://fonts/HirukoBlackAlternate.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://font32.tres" type="DynamicFont" id=7]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/blue.png-958c7f45f3af13badcd9713d84b15efb.stex"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[node name="Options2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1524.0
margin_bottom = 924.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1424.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "Einstellungen"
align = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 91.0
margin_top = 104.0
margin_right = 1333.0
margin_bottom = 272.0
size_flags_horizontal = 4
custom_constants/vseparation = 10
custom_constants/hseparation = 200
columns = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 65.0
margin_right = 160.0
margin_bottom = 120.0
size_flags_horizontal = 4
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 491.0
margin_right = 586.0
margin_bottom = 120.0
size_flags_horizontal = 4
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 852.0
margin_right = 947.0
margin_bottom = 120.0
size_flags_horizontal = 4
texture = ExtResource( 5 )

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 1147.0
margin_right = 1242.0
margin_bottom = 120.0
size_flags_horizontal = 4
texture = SubResource( 1 )

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 130.0
margin_right = 226.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
text = "Realer Spieler"
align = 1
items = [ "Realer Spieler", null, false, 0, null, "CPU", null, false, 1, null, "Kein Spieler", null, false, 2, null ]
selected = 0

[node name="OptionButton2" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 426.0
margin_top = 130.0
margin_right = 652.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 7 )
text = "Realer Spieler"
align = 1
items = [ "Realer Spieler", null, false, 0, null, "CPU", null, false, 1, null, "Kein Spieler", null, false, 2, null ]
selected = 0

[node name="OptionButton3" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 852.0
margin_top = 130.0
margin_right = 947.0
margin_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "CPU"
align = 1
items = [ "Realer Spieler", null, false, 0, null, "CPU", null, false, 1, null, "Kein Spieler", null, false, 2, null ]
selected = 1

[node name="OptionButton4" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 1147.0
margin_top = 130.0
margin_right = 1242.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 7 )
text = "CPU"
align = 1
items = [ "Realer Spieler", null, false, 0, null, "CPU", null, false, 1, null, "Kein Spieler", null, false, 2, null ]
selected = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 515.0
margin_top = 312.0
margin_right = 909.0
margin_bottom = 382.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_constants/hseparation = 1000
text = "Spiel Starten!"
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
